tests/baselines/reference/nodeResolution7.errors.txt
tests/cases/compiler/b.ts(1,20): error TS2306: File 'tests/cases/compiler/node_modules/a/index.d.ts' is not a module.


==== tests/cases/compiler/c.ts (0 errors) ====
    import x = require("./b");
    
==== tests/cases/compiler/node_modules/a/index.d.ts (0 errors) ====
    
    declare module "a" {
        var x: number;
    }
    
==== tests/cases/compiler/b.ts (1 errors) ====
    import * as y from "a";
                       ~~~
!!! error TS2306: File 'index.d.ts' is not a module.
    